src/styles/rental.css
.full-container {
  display: flex;
  flex-direction: column;
  justify-content: flex-start;
  align-items: center;
  background-color: rgb(222, 224, 189);
  padding: 1rem 6rem;
}

.inner-container {
  width: 100%;
  display: flex;
  flex-direction: column;
  gap: 1rem;
}

.line {
  width: 100%;
  height: fit-content;
}

.flex-container {
  width: 100%;
  height: fit-content;
  display: flex;
  gap: 1rem;
  justify-content: space-between;
}

.half-container {
  align-items: center;
  gap: 10px;
  display: flex;
  width: fit-content;
}

.vertical {
  flex-direction: column;
  justify-content: center;
  gap: 1.3rem;
}

.h-left {
  justify-content: flex-start;
}

.h-center {
  align-items: center;
}

.h-space-between {
  justify-content: space-between;
}

.left {
  align-items: flex-start;
}

.gap {
  gap: 1rem;
}

.host-image {
  height: 100px;
  border-radius: 100%;
}

.right {
  flex-direction: column;
  align-items: flex-end;
  padding: 20px;
}

.see-more {
  display: block;
  background-color: #7e9c67;
  height: fit-content;
  padding: 1rem 2rem;
  border-radius: 50px;
  font-size: 15px;
}

.space {
  height: 2rem;
}

.reviews-container {
  width: 40rem;
  display: flex;
  flex-direction: column;
  padding-top: 1rem;
}

.reviews-top {
  width: 100%;
  display: flex;
  justify-content: space-between;
}

.review-container {
  width: 100%;
  height: fit-content;
  align-items: flex-start;
  gap: 1rem;
  overflow: hidden;
  padding-bottom: 1rem;
}
.review-container.collapsed {
  max-height: 21rem; /* only shows reviews that fit inside 22rem box */
}

.review {
  background-color: #ffffff;
  height: 9rem;
  width: 100%;
  border-radius: 70px;
  overflow-y: auto; /* scroll should only appear if text goes beyond review "box" */
  padding: 20px 40px;
  margin-top: 20px;
}

.amenities-container {
  display: flex;
  justify-content: space-between;
  gap: 5rem;
}

.inset {
  display: flex;
  flex-direction: column;
  width: 100%;
  padding: 0px 6rem 0px 2rem;
  gap: 2rem;
}

.form-container {
  display: flex;
  align-items: flex-start;
  justify-content: center;
  flex: 1;
  padding: 10rem 0rem;
}

.inner-form-container {
  display: flex;
  flex-direction: column;
  background-color: #ffffff;
  padding: 3rem;
  border-radius: 50px;
  text-align: center;
  gap: 1rem;
}

.input-container {
  background-color: #7e9c67;
  display: flex;
  flex-direction: column;
  width: 100%;
  border: #7e9c67;
  border-style: solid;
  border-radius: 30px;
  border-width: 2px;
  padding: 1rem;
  gap: 1rem;
}

.date-inputs {
  display: flex;
  flex-direction: row;
  flex: 1;
  justify-content: space-between;
  width: 100%;
  gap: 2rem;
}

.start-date,
.end-date,
.guests-input,
.start-date input,
.end-date input,
.guests-input input {
  width: 100%;
}

.start-date input,
.end-date input,
.guests-input input {
  border: none;
  height: 2rem;
  border-radius: 50px;
  padding: 1rem;
}

.booking-summary {
  display: flex;
  width: 100%;
}

.fee,
.sum {
  display: flex;
  gap: 0.3rem;
}

.policy-container {
  display: flex;
  gap: 0.3rem;
}

.policy {
  text-decoration: underline;
}

/* IMAGE GRID */

.image-container {
  width: 100%;
  height: 40rem;
  margin: 1rem 0rem;
}

.single-grid {
  width: 100%;
  height: 100%;
  display: flex;
}

.single-grid img {
  flex: 1;
  object-fit: cover;
  border-radius: 100px;
}

.double-grid,
.triple-grid {
  width: 100%;
  height: 100%;
  display: flex;
  gap: 1rem;
}

.double-grid img {
  width: 50%;
  height: auto;
  object-fit: cover;
  border-radius: 50px;
}

.triple-grid img {
  width: 33.3333333%;
  height: auto;
  object-fit: cover;
  border-radius: 50px;
}

.quad-grid {
  width: 100%;
  height: 100%;
  display: flex;
  flex-direction: column;
  gap: 1rem;
}

.half-quad {
  width: 100%;
  height: 50%;
  display: flex;
  gap: 1rem;
}

.half-quad img {
  width: 50%;
  object-fit: cover;
  border-radius: 50px;
}

.quint-grid {
  width: 100%;
  height: 100%;
  display: flex;
  gap: 1rem;
}

.quint-grid img {
  width: 50%;
  object-fit: cover;
  border-radius: 50px;
}

.right-quint {
  flex: 1;
  height: 100%;
  display: flex;
  flex-direction: column;
  gap: 1rem;
}

.half-right-quint {
  flex: 1;
  height: 49%;
  display: flex;
  gap: 1rem;
}

.half-right-quint img {
  width: 49%;
  flex: 1;
  object-fit: cover;
  border-radius: 50px;
}

/* Booking Window */
.booking-container {
  display: flex;
  align-items: flex-start;
  justify-content: center;
  padding: 2rem 4rem 0rem 4rem;
}

.booking-window {
  display: flex;
  flex-direction: column;
  background-color: rgb(255, 255, 255);
  width: 100%;
  align-items: center;
  padding: 2rem;
  border-radius: 50px;
  gap: 1rem;
}

Button {
  margin: 0px;
  width: fit-content;
}

.validation-messages {
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
}

.success-message {
  text-align: center;
}

.top-container {
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  gap: 1rem;
}

.policy-container {
  align-self: center;
}

.reserve-button{
  justify-self: center;
  align-self: center;
}

.collapsed-description {
  justify-content: flex-start;
  overflow-y: hidden;
  display: -webkit-box;
  -webkit-line-clamp: 10;
  -webkit-box-orient: vertical;
}

.expanded-description {
  justify-content: flex-start;
  overflow-y: hidden;
  height: fit-content;
}

